feat(ex1): add exercice 1

--- a/src/chore/styles/index.css
+++ b/src/chore/styles/index.css
@@ -216,3 +216,9 @@ hr {
 .square.winning-square {
   background-color: var(--primary);
 }
+
+.demo-component-wrapper {
+  margin: auto;
+  width: fit-content;
+  margin-top: 32px;
+}
